# Serverless_Rust

./: Cargo.toml
src/: main.rs
