[package]
name = "serverless_spike"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.1"
serde = "1.0.130"
serde_json = "1.0.69"
serde_derive = "1.0.130"
log = "0.4.14"
simple_logger = "1.13.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"